<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tljr_statusbarcolor">
    <RelativeLayout
        android:id="@+id/tljr_grp_goods_title"
        android:layout_width="fill_parent"
        android:layout_height="?attr/TitleHeight"
        android:background="@color/white"
        android:visibility="visible">

        <TextView
            android:id="@+id/tljr_txt_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_or_modify_address"
            android:textColor="@color/hwg_text1"
            android:textSize="?attr/TitleTextSize" />

        <TextView
            android:id="@+id/tljr_hqss_news_titlebelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tljr_txt_news_title"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textColor="?attr/TitleTextColor"
            android:textSize="8dp" />

        <RelativeLayout
            android:id="@+id/relative_back"
            android:layout_width="?attr/TitleHeight"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/tljr_click">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/hwg_text2"
                android:textSize="16sp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/t_ok"
            android:layout_width="?attr/TitleHeight"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/tljr_click"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/tljr_statusbarcolor"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/tljr_grp_goods_title"
        android:scrollbars="none"
        android:background="@color/tljr_bj"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tljr_bj"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/receiver_name"
                android:padding="5dp"
                android:textColor="@color/hwg_text2"
                android:textColorHint="@color/tljr_text_tishi"
                android:textCursorDrawable="@drawable/edittextcursor"
                android:textSize="15sp" />


            <EditText
                android:maxLength="11"
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/mobile_phone"
                android:padding="5dp"
                android:inputType="number"
                android:textColor="@color/hwg_text2"
                android:textColorHint="@color/tljr_text_tishi"
                android:textCursorDrawable="@drawable/edittextcursor"
                android:textSize="15sp" />


            <Spinner
                android:id="@+id/spinner_province"
                style="?android:attr/spinnerItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/t_reason"
                android:entries="@array/refund_return"
                android:visibility="gone">
            </Spinner>

            <RelativeLayout
                android:id="@+id/relative_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/t_province"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:gravity="center_vertical"
                    android:hint="@string/province"
                    android:padding="5dp"
                    android:background="@null"
                    android:textColor="@color/hwg_text2"
                    android:textColorHint="@color/tljr_text_tishi"
                    android:textCursorDrawable="@drawable/edittextcursor"
                    android:textSize="15sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/t_city"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:gravity="center_vertical"
                    android:hint="@string/city"
                    android:padding="5dp"
                    android:background="@null"
                    android:textColor="@color/hwg_text2"
                    android:textColorHint="@color/tljr_text_tishi"
                    android:textCursorDrawable="@drawable/edittextcursor"
                    android:textSize="15sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white">

                <EditText
                    android:id="@+id/t_area"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:gravity="center_vertical"
                    android:hint="@string/area"
                    android:padding="5dp"
                    android:textColor="@color/hwg_text2"
                    android:textColorHint="@color/tljr_text_tishi"
                    android:textCursorDrawable="@drawable/edittextcursor"
                    android:background="@null"
                    android:textSize="15sp" />


            </RelativeLayout>

            <EditText
                android:id="@+id/ed_detail"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/detaile_address"
                android:padding="5dp"
                android:textColor="@color/hwg_text2"
                android:textColorHint="@color/tljr_text_tishi"
                android:textCursorDrawable="@drawable/edittextcursor"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:maxLength="6"
                android:inputType="number"
                android:id="@+id/ed_postcode"
                android:hint="@string/postcode"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/hwg_text2"
                android:textColorHint="@color/tljr_text_tishi"
                android:textCursorDrawable="@drawable/edittextcursor"
                />

            <EditText
                android:visibility="gone"
                android:inputType="text"
                android:digits="@string/type_limit"
                android:maxLength="18"
                android:id="@+id/ed_id_card"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/id_card"
                android:padding="5dp"
                android:textColor="@color/hwg_text2"
                android:textColorHint="@color/tljr_text_tishi"
                android:textCursorDrawable="@drawable/edittextcursor"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="49dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/hwg_text2"
                    android:text="@string/set_default_address"
                    android:textCursorDrawable="@drawable/edittextcursor"
                    android:textSize="15sp" />

                <ToggleButton
                    android:id="@+id/btn_isdefault"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:button="@drawable/switch_btn"
                    android:checked="false"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>