<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/tljr_white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_222fengexian" />

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/tljr_black" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="118dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/img_shuiyin1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_guibingtongdao" />

    <TextView
        android:id="@+id/main_txt_vipmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="30dp"
        android:text="@string/fragment_main_vipmsg"
        android:textColor="@color/tljr_text_tishi"
        android:textSize="12sp" />

    <View
        android:id="@+id/main_img_vip_line"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/img_space_hight"
        android:layout_above="@+id/main_txt_vipmsg"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/img_shape_space" />

    <TextView
        android:id="@+id/main_txt_vip_highgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_img_vip_line"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="30dp"
        android:text="@string/fragment_main_vip_highgain"
        android:textColor="@color/tljr_text_default"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/main_img_enter_vip"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_alignBottom="@+id/main_txt_vip_highgain"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/tljr_shape_redcirclebj"
        android:gravity="center"
        android:text="@string/fragment_main_enter"
        android:textColor="@color/tljr_white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/main_et_vip"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/main_txt_vip_highgain"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/main_img_enter_vip"
        android:background="@drawable/edittext_theme"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/fragment_main_entercode"
        android:inputType="number"
        android:textColor="@color/tljr_text_default"
        android:textColorHint="@color/tljr_text_tishi"
        android:textCursorDrawable="@drawable/edittextcursor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_txt_vip_highgain"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="30dp"
        android:text="@string/fragment_main_vip_highservice"
        android:textColor="@color/tljr_text_default"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/img_222fengexian" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/img_wenhao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/fragment_main_what"
            android:textColor="@color/tljr_text_tishi"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>