<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/main_grp_regular_safe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/main_txt_regular_safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="安全保障"
            android:textColor="@color/tljr_text_default"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="103.5dp"
            android:layout_height="1.5dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/main_txt_regular_safe"
            android:rotation="180"
            android:src="@drawable/img_jianbianxian" />

        <ImageView
            android:layout_width="103.5dp"
            android:layout_height="1.5dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/main_txt_regular_safe"
            android:src="@drawable/img_jianbianxian" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_grp_regular_safe">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:src="@drawable/img_kuaijiezhifu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_safe1"
                android:textColor="@color/tljr_text_default"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/fragment_main_safe2"
                android:textColor="@color/tljr_text_tishi"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_222fengexian" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:src="@drawable/img_zijintuoguan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_safe3"
                android:textColor="@color/tljr_text_default"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/fragment_main_safe4"
                android:textColor="@color/tljr_text_tishi"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_222fengexian" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:src="@drawable/img_chengbao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_safe5"
                android:textColor="@color/tljr_text_default"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/fragment_main_safe6"
                android:textColor="@color/tljr_text_tishi"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
